fix "Add to vessel group" z-index fight

--- a/apps/fishing-map/features/vessel/Vessel.module.css
+++ b/apps/fishing-map/features/vessel/Vessel.module.css
@@ -6,3 +6,8 @@
 .secondary {
   color: var(--color-secondary-blue);
 }
+
+.headerContainer {
+  position: relative;
+  z-index: 1;
+}
